On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   _layouts/default.html
	new file:   _posts/2024-03-20-getting-started-with-fhir.md
	modified:   architecture.md
	modified:   assets/css/main.css
	new file:   blog.md
	modified:   competencies.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -215,13 +215,10 @@
                         </a>
                     </div>
                 </div>
-                <a href="/blog" class="nav-link {% if page.url == '/blog' %}active{% endif %}">
+                <a href="/blog" class="nav-link {% if page.url == '/blog/' %}active{% endif %}">
                     <i class="fas fa-blog"></i> Blog
                 </a>
-                <a href="/case-studies" class="nav-link {% if page.url == '/case-studies' %}active{% endif %}">
-                    <i class="fas fa-book-open"></i> Case Studies
-                </a>
-                <a href="/contact" class="nav-link {% if page.url == '/contact' %}active{% endif %}">
+                <a href="/contact" class="nav-link {% if page.url == '/contact/' %}active{% endif %}">
                     <i class="fas fa-envelope"></i> Contact
                 </a>
                 <div class="nav-dropdown">
